# ECPAD

./: README.md
ApplicationLibrary/: README.md
ApplicationLibrary/cross-compile-PLC/: Dockerfile  install.sh
ApplicationLibrary/cross-compile-PLC/project/: CMakeLists.txt  main.cpp
ApplicationLibrary/cross-compile-PLC/project/include/: ladder.h
ApplicationLibrary/cross-compile-PLC/project/src/: hardware_layer.cpp
ApplicationLibrary/mini_PLC/: Dockerfile  openplc
ApplicationLibrary/mpu6050/: Dockerfile  (+1 more)
Deployment/: app_mnist_mqtt.yaml  app_pv_mqtt.yaml  app_text_mqtt.yaml  brokermqtt.yaml  change.yaml  mnist_mqtt.yaml  mpu_mnist.yaml  mqtt_single.yaml  mqttservice.yaml  redis.yaml  show.yaml  show_mnist_cnn_mqtt.yaml  show_pv_mqtt.yaml  show_text_mqtt.yaml
MQTT开发/: MQTT基础.md  MQTT微服务链开发.md  MQTT部署K8s.md
MicroserviceLibrary/: README.md
Monitoring/: components.yaml
deep learning/: pth生成模板.txt  解析mnist数据集.txt
docker swarm/: docker desktop的swarm集群.md
k8s Raspberry Pi/: containerd-harbor.txt  添加密钥.txt  网络问题debug.md
k8s nvidia nano/: Nvidia Nano和Xavier nx的k8sGPU配置.md  jetson nano配置.md
k8s scheduler/: README.md  schedulerframework+Prometheus.md
k8s调试文件/: config_all_k8s.txt  集群部署flannel.txt
nvidia配置/: jetson xavier nx配置.md  nvidia nano配k8s-cridocker.md
持久化/: K8S持久化的两种方法PV与SC.md
树莓派配k8s/: containerd-harbor.txt  containerd-k8s.md  helm.md  树莓派k8s-cridockerd.md  树莓派配k8s-containerd.md  添加密钥.txt
注册组件/: consul.md
监测组件/: K8s的Metrics.md
调度器/: main1.go  schedulerframework+Prometheus.md  调度器开发流程.md
集群镜像开发/: deployment.yaml模板.md  镜像开发.md
(+112 files in other folders)
